# work-timer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_workplaces.sql
src-tauri/src/: commands.rs  main.rs
src/components/: ManualEntry.tsx  MonthlyView.tsx  SettingsPanel.tsx  TimerPanel.tsx
src/lib/: api.test.ts  api.ts
src/types/: index.ts
